k8s/tetris/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
  namespace: tetris
spec:
  type: ClusterIP
  selector:
    app: tetris
  ports:
  - port: 80
    targetPort: 8000
